tests/parser/bug_78/invalid_6.m.out
In invalid_6.m, line 4
| disp foo'bar
|         ^ lex error: this command form string is not terminated properly
In invalid_6.m, line 4
| disp foo'bar
|      ^^^^^^^ style: end statement with a semicolon
----------------------------------------------------------------------
--  Parse tree for invalid_6.m
Root: Script_File
  Statements: Sequence_Of_Statements
    Statements: Naked_Expression_Statement
      Expression: Command form Function_Call
        Name: Identifier <disp>
        Arguments: Char_Array_Literal 'foobar'
----------------------------------------------------------------------
MISS_HIT Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
